Fix cut off picklist options that have long names
  also for big mobile screens

--- a/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
@@ -460,7 +460,7 @@ select:disabled {
     border-color: $checkbox-color !important;
 }
 
-@media screen and (max-width: $mobile-breakpoint) {
+@media screen and (max-width: $tablet-breakpoint) {
     // autocomplete-picklist-question
     .autoCompletePanel {
         .mat-option {
